--- a/Homework.html
+++ b/Homework.html
@@ -7,495 +7,34 @@
 	<link rel="stylesheet" type="text/css" href="font_q2rgb6thktf/iconfont.css">
 	<link rel="stylesheet" type="text/css" href="font_281n1xck4wm/iconfont.css">
 	<link rel="stylesheet" type="text/css" href="font_qtr60g6ragn/iconfont.css">
+	<link rel="stylesheet" type="text/css" href="font_g4wer98cchu/iconfont.css">
+	<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="font_13cobm8q9dqk/iconfont.css">
+	<link rel="stylesheet" type="text/css" href="font_lahfptwg48/iconfont.css">
 	<style type="text/css">
-		.public-box{
-			width: 1100px;
-			margin: 5px auto;
-			
-		}
 		.MY-lipinhe{
 			font-size: 2.5em;
-			color:  #7c724e;	
+			color:  #7c724e;
+			
 		}
 		.MY-xinhao{
 			font-size: 4em;
 			color:  #7c724e;
 
 		}
-		.head{
-			border: 1px solid #333333;
-			background-color: #333333;
-			color: #aa9f81;
-			font-size: 12px;
-		}
-		.head i{
-				margin-left: 10px;
-				}
-		.head .head-left a{
-			color: #aa9f81;
-			text-decoration:  underline;
-		}
-		.head .public-box .head-right a{
-			width: 100%;
-			color: #aa9f81;
-			padding-left: 10px;
-		}
-		.public-box::after{
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.head-left{
-			width: 400px;
-			/* height: 50px; */
-			
-			float: left;
-			line-height: 2em;
-		}
-		.head-right{
-			width: 500px;
-			/* height: 50px; */
-			
-			float: right;
-			line-height: 2em;
-		}
-		.head-right>ul>li{
-			margin-right: 10px;
-			text-align: center;
-		}
-		.head-right>ul>li:nth-child(1)~li>a{
-				border-left: 1px solid #aa9f81;
-		}
-		.logo-box{
-			width: 650px;
-			
-			float: right;
-		}
-		.logo-box>div::after{
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.logo-box>div div:nth-child(1){
-			float: left;
-			font-size: 3em;
-			width: 40px;
-			color: #7c724e;	
-		}
-		.logo-box .yanxuan{
-			float: left;
-			text-align: center;
-			font-size: 4em;
-			line-height: 1em;
-			width: 160px;
-			color: #7c724e;
-			margin-top: 30px;
-		}
-		.logo-box .search{
-			float: right;
-			position: relative;
-			right: 80px;
-			top: 40px;
-			width: 320px;
-			color: #7c724e;	
-			line-height: 2em;
-			font-size: 2em;
-		}
-
-		.logo-box .search::after{
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.search>input{
-			border-style:none;
-			border-bottom: 1px solid #7c724e;
-			width: 250px;
-		}
-		.search div{
-			position: absolute;
-			right: 0;
-			top:0;
-		}
-		.logo-box .search div div{
-			width: 15px;
-			height: 15px;
-			background-color: red;
-			position: absolute;
-			right: -5px;
-			top: 12px;
-			border-radius: 50%;
-		}
-		.logo-box .search div div>span{
-			position: absolute;
-			left: 4px;
-			top: -20px;
-			font-size: 12px;
-			color:#ffffff;
-		}
 		.search-i{
   			font-size: 0.8em;
 		}
-		.nav .public-box{
-			margin-top: 20px;
+		.MY-weixin{
+			font-size: 1.3em;
+			color: green;
+			margin-left: 20px;
 		}
-		.nav .public-box>ul>li a{
-			color: #333333;
-			font-size: 1.2em;
-			font-weight: bold;
-		}
-		.nav .public-box>ul a:hover{
-			color: #7c724e;
-		}
-		.nav li:hover >.secondary-menu{
-			display: block;
-		}
-		.nav .public-box>ul li{
-			width: 80px;
-			text-align: center;
-			height: 3em;
-		}
-		.one-menu>li>a::after{
-			height: 3px;
-			width: 2em;
-			background-color: #7c724e;
-			display: block;
-			position: relative;
-			content: "";
-			margin: 0 auto;
-			top: 5px;
-			display: none;
-		}
-		.one-menu>li>a::after:first-child{
-			display: block;
-		}
-		.one-menu>li:hover >a::after {
-			display: block;				
-		}
-		.nav .public-box>ul li li{
-			width: 13%;
-			height: 80px;
-			line-height: 1em;
-			font-weight: bold;
-			margin-top: 25px;
-		}
-		.advertising{
-			
-			
-			
-			text-align: center
-		}
-		.advertising>a>img{
-			width: 1520px; 
-			
-		}
-		.secondary-menu{
-			position: absolute;
-			background-color: #ffffff;
-			width: 100%;
-			left: 0;
-			display: none;
-			margin-top: 5px;
-		}
-		.secondary-menu>ul{
-			margin: 0 auto;
-			width: 1100px;
-		}
-		.secondary-menu p{
-			margin-top: 5px;
-		}
-		.right-advertising{
-			width: 70px;
-			height: 600px;
-			background-color: #ffffff;
-			position: fixed;
-			right: 0px;
-			top: 37px;
-		}
-		.right-advertising>ul{
-			height: 100%;
-		}
-		.right-advertising>ul>li{
-			text-align: center;
-			padding-top: 10px;
-			width: 100%;
-			position: relative;
-			padding-bottom: 10px;
-		}
-		.right-advertising>ul>li:first-child{
-			padding-top: 0;
-		}
-		.right-advertising>ul>li:hover .advertising-prompt{
-			display: block;
-		}
-		.advertising-prompt{
-			width: 250px;
-			height: 100px;
-			background-color: pink;
-			position: absolute;
-			top: 0px;
-			right: 80px;
-			display: none;
-		}
-		.right-advertising>ul li:nth-child(2) div{
-			color: #7c724e;
-			text-align: center;
-		}
-		.right-advertising>ul li:nth-child(2) img{
-			width: 70px;
-			margin-top: 5px;
-		}
-		.right-advertising>ul li:nth-child(2) span{
-			font-size: 12px;
-			margin-top: 5px;
-			color: #666666;
-		}
-		.right-advertising>ul li:nth-child(2)~li{
-			border-top: 1px solid #999999;
-
-		}
-		.right-advertising>ul  span{
-			font-size: 14px;
-			margin-top: 5px;
-			color: #666666;
-		}
-		.product-1 .public-box{
-			margin-top: 30px;
-		}
-		.product-1 ul{
-			margin-top:  10px;
-		}
-		.product-1 .manufacturers-ul>li:nth-child(1){
-			width: 360px;
-			height: 330px;
-			background-color: #faddd9;
-		}
-		.product-1 .manufacturers-ul>li:nth-child(2){
-			width:  360px;
-			height: 330px;
-			margin:0 10px 0 10px ;
-			background-color: #edcc7d;
-		}
-		.product-1 .manufacturers-ul>li:nth-child(3){
-			width:  360px;
-			height: 160px;
-			background-color: #e9c3c2;
-		}
-		.product-1 .manufacturers-ul>li:nth-child(4){
-			margin-top: 10px;
-			width: 360px;
-			height: 160px;
-			background-color: #f8e5d6;
-		}
-		.product-1-head h1{
-			float: left;
-		}
-		.product-1-head>div:nth-child(2){
-			color: #888888;
-			position: relative;
-			top: 15px;
-			left: 40px;
-			float:left;
-		}
-		 .product-1-head>div:nth-child(3){
-			color: #888888;
-			position: relative;
-			top: 15px;
-			float: right;
-		}
-		.product-1-head::after{
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.manufacturers-ul .manufacturers-li >div:nth-child(1){
-			margin-top: 30px;
-			margin-bottom: 20px;
-			text-align: center;
-			font-size: 2em;
-			color: #7c724e;
-		}
-		.manufacturers-ul .manufacturers-li >div:nth-child(2){
-				width: 60px;
-				margin: 0 auto;
-				text-align: center;
-				line-height: 40px;
-				color: #7c724e;
-				border-top: 1px solid #7c724e;
-		}
-		.product-1 .new-goods-ul>li{
-			width: 265px;
-			height: 300px;
-			background-color: #76c79c;
-			margin-right: 10px;
-		}
-		.new-goods{
-			margin-top: 40px;
-		}
-
-		.recommended{
-			background-color: #f8f1eb;
-			margin-top: 20px;
-			padding-bottom: 40px;
-			padding-top: 40px;
-		}
-		.recommended .recommended-ul{
-			margin-top: 10px;
-		}
-		 li div{
-			text-align: center;
-		}
-		.commodity-description div:nth-child(1){
-			width: 60px;
-			height: 20px;
-			background-color: #e47547;
-			margin:0 auto;
-			color: #ffffff;
-		}
-		.commodity-description div:nth-child(2){
-			font-weight: bold;
-			color:#333333;
-			margin-top: 10px;
-			font-size: 1.1em;
-		}
-		.commodity-description div:nth-child(3){
+		.MY-weibo{
+			font-size: 1.3em;
 			color: red;
-			margin-top: 5px;
-			
+			margin-left: 20px;
 		}
-
-		.recommended-ul-li-div{
-			margin-top: 100px;
-		}
-		.hot{
-			width: 150px;
-			margin: 0 auto;
-			text-align: center;
-		}
-		.hot div:nth-child(1){
-			background-color: #e39e59;
-			color: #ffffff;
-			width: 4.5em;
-			margin-left: 10px;
-			margin-right: 10px;
-		}
-		.hot>div:nth-child(2){
-			background-color: #e47547;
-			margin:0 auto;
-			color: #ffffff;
-			width: 4.2em;
-			
-		}
-		.hot>div:nth-child(3){
-			font-weight: bold;
-			color:#333333;
-			position: relative;
-			top: 10px;
-			font-size: 1.2em;
-
-		}
-		.hot>div:nth-child(4){
-			color: red;
-			margin-top: 15px;
-		}
-		
-		.hot>div:nth-child(1){
-			float: left;	
-		}
-		.hot>div:nth-child(2){
-			float: left;	
-		}
-		.hot::after{
-				content: "";
-				display: block;
-				clear: both;
-		}
-		.recommended .recommended-ul>li:nth-child(1){
-			width: 400px;
-			height: 530px;
-			background-color: #ffffff;
-			margin-right: 10px;
-			margin-top: 10px;
-		}
-		.recommended .recommended-ul>li:nth-child(1)~li{
-			width: 220px;
-			height: 260px;
-			background-color: #ffffff;
-			margin-right: 10px;
-			margin-top: 10px;
-		}
-		.recommended .product-1-head ul>li{
-			color: #888888;
-			margin-left: 40px;
-		}
-		.recommended .product-1-head ul>li a::after{
-			height: 3px;
-			width: 4em;
-			background-color: #7c724e;
-			position: relative;
-			content: "";
-			margin: 0 auto;
-			top: 5px;
-			display: none;
-		}
-		.recommended .product-1-head ul>li:hover>a::after{
-			display: block;
-		}
-		.product-1 .product-1-head a{
-			color: #888888;
-		}
-		.product-1-head a:hover{
-			color: #7c724e;
-		}
-		.diet-box .diet-content>ul li:first-child{
-			width: 1090px;
-			height: 300px;
-			background-color: #eefef1;
-			background:url("images/yinshi.jpg");
-		}
-		.diet-box .diet-content>ul li:first-child~li{
-			width: 265px;
-			margin-right: 10px;
-			background-color: #f7c9cb;
-			height: 350px;
-			margin-top: 15px;
-			margin-bottom: 20px;
-		}
-		.diet-head{
-			width: 1090px;
-		}
-		.diet-head>h1{
-			float: left;
-			margin-bottom: 15px;
-		}
-		.diet-head>div{
-			float: right;
-			text-align: center;
-			height: 51.8px;
-			width: 50%;
-			line-height: 51.8px;
-		}
-		.diet-head>div>ul>li>a{
-			margin-right: 10px;
-			color: #333333;
-		}
-		.diet-head>div>ul>li:hover>a{
-			color: #7c724e;
-		}
-		.diet-head::after{
-			content: "";
-			display: block;
-			clear: both;
-		}
-		.feedback-box{
-			height: 300px;
-			background-color: #f5f5f5;
-		}
-		.bottom{
-			height: 200px;
-			background-color: #424242;
-		}
-
 	</style>
 </head>
 <body>
@@ -796,30 +335,60 @@
 	<div class="product-1">
 		<div class="public-box">
 			<div class="manufacturers">
-			<div class="product-1-head">
+				<div class="product-1-head">
 				<h1>产品制造商</h1>
 				<div>工厂直达消费者，剔除产品溢价</div>
 				<div><a href="#">更多制造商   ></a> </div>
 			</div>
 			<ul class="manufacturers-ul">
 				<li>
-				<div class="manufacturers-li">
+				<a href="#"> <div class="manufacturers-li-div">
 					<div>CK制造商</div>
 					<div>25元起</div> 
-				</div> 
+					<img src="images/pinpai_06.png" alt="图片找不到了" class="transform-img">
+				</div> </a>
 				</li>
 				<li>
-				<div class="manufacturers-li">
-					<div>Kenneth Cole制造商</div>
-					<div>209元起</div> 
-				</div>
+					<a href="#"> 
+						<div class="manufacturers-li-div">
+							<div>Kenneth Cole制造商</div>
+							<div>209元起</div> 
+							<img src="images/pinpai_10.png" alt="图片找不到了"
+							class="transform-img">
+						</div>
+					</a>
 				</li>
-				<li>Ralph Lauren制造商</li>
-				<li>海外制造商</li>
+				<li>
+					<a href="#"> 
+						<div class="manufacturers-right-li-div">
+							<div>
+								<div>海外制造商</div>
+								<div>价格</div> 
+							</div>
+							<div>
+								<img src="images/pinpai_03.png" alt="图片找不到了" class="transform-img">
+							</div>
+						</div>
+					</a>
+				
+
+				</li>
+				<li>
+				<a href="#"> <div class="manufacturers-right-li-div">
+						<div>
+							<div>Ralph Lauren制造商</div>
+							<div>价格</div> 
+						</div>
+						<div>
+							<img src="images/pinpai_13.png" alt="图片找不到了" class="transform-img">
+						</div>
+					</div></a>
+
+				</li>
 			</ul>
 			</div>
 			<div class="new-goods">
-			<div class="product-1-head">
+				<div class="product-1-head">
 				<h1>新品首发</h1>
 				<div>为你寻觅世间好物</div>
 				<div><a href="#">更多新品   ></a> </div>
@@ -827,25 +396,48 @@
 			<ul class="new-goods-ul">
 				<li>
 					<div>
-						<img src="images/qiximeigui.jpg">
+						<img src="images/qiximeigui.jpg" >
 					</div> 
+					<div class="hot">
+							<div>七夕推荐</div>
+							<div class="time-limit">七夕礼物</div>
+							<div>定情七夕.红玫瑰</div>
+							<div class="price">价格</div>
+						</div>
 				</li>
 				<li>
 					<div>
 						<img src="images/zhenzhu.jpg">
 					</div> 
-				词典笔</li>
+					<div class="hot">
+							<div>七夕推荐</div>
+							<div class="time-limit">七夕礼物</div>
+							<div>定情七夕.珍珠项链</div>
+							<div class="price">价格</div>
+						</div>
+				</li>
 				<li>
 					<div>
 						<img src="images/zhenzhuerdin.jpg">
-					</div> 
-					耳机</li>
+					</div>
+					<div class="hot">
+							<div>七夕推荐</div>
+							<div class="time-limit">七夕礼物</div>
+							<div>定情七夕.珍珠耳钉</div>
+							<div class="price">价格</div>
+						</div></li>
 				<li>
 					<div>
 						<img src="images/meijiu.jpg">
-					</div> 
-					枕头</li>
-			</ul>
+					</div>
+					 <div class="hot">
+							<div>七夕推荐</div>
+							<div class="time-limit">七夕特价</div>
+							<div> 和歌山柚子梅酒</div>
+							<div class="price">价格</div>
+					</div>
+				</li>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -865,7 +457,7 @@
 				<li>
 				<a href="#">
 					<div>
-						<img src="images/bobei.png">
+						<img src="images/bobei.png" alt="图片找不到了" class="transform-img">
 					</div> 
 					<div class="recommended-ul-li-div">
 						<div class="hot">
@@ -881,7 +473,7 @@
 				<li>
 					<a href="#">
 						<div>
-							<img src="images/xiangzi.png">
+							<img src="images/xiangzi.png" alt="图片找不到了" class="transform-img">
 						</div> 
 						<div class="hot">
 							<div>爆品</div>
@@ -894,7 +486,7 @@
 				<li>
 					<a href="#">
 						<div>
-							<img src="images/yanwo.png">
+							<img src="images/yanwo.png" alt="图片找不到了" class="transform-img">
 						</div>
 						<div class="commodity-description">
 							<div class="time-limit">限时抢购</div>
@@ -906,7 +498,7 @@
 				<li>
 					<a href="#">
 						<div>
-							<img src="images/zuodian.png">
+							<img src="images/zuodian.png" alt="图片找不到了" class="transform-img">
 							
 						</div>
 						<div class="commodity-description">
@@ -919,7 +511,7 @@
 				<li>
 					<a href="#">
 					<div>
-						<img src="images/yashua.png">
+						<img src="images/yashua.png" alt="图片找不到了" class="transform-img">
 					</div>
 					<div class="commodity-description">
 							<div class="time-limit">限时抢购</div>
@@ -930,7 +522,7 @@
 				<li>
 					<a href="#">
 					<div>
-						<img src="images/mianmaojin.png">
+						<img src="images/mianmaojin.png" alt="图片找不到了" class="transform-img">
 					</div>
 					<div class="hot">
 							<div>爆品</div>
@@ -942,7 +534,7 @@
 				<li>
 				  <a href="#">
 				  <div>
-						<img src="images/zhijin.png">
+						<img src="images/zhijin.png" alt="图片找不到了" class="transform-img">
 					</div>
 					<div class="commodity-description">
 							<div class="time-limit">限时抢购</div>
@@ -973,40 +565,40 @@
 					</div>
 					<div class="diet-content">
 						<ul>
-							<li></li>
+							<li><a href="#"></a> </li>
 							<li>
-								<img src="images/qiaokeli.png">
+								<a href="#"><img src="./images/qiaokeli.png" alt="图片找不到了" class="transform-img">
 								<div class="hot">
 									<div>七夕推荐</div>
 									<div class="time-limit">美食特惠</div>
 									<div>巧克力</div>
 									<div class="price">价格</div>
-								</div>
+								</div></a>
 							</li>
 							<li>
-								<img src="images/cuicuixia.png">
+								<a href=""> <img src="images/cuicuixia.png" alt="图片找不到了" class="transform-img">
 								<div class="commodity-description">
 									<div class="time-limit">N元任选</div>
 									<div >脆脆虾</div>
 									<div class="price">价格</div>
-								</div>
+								</div></a>
 							</li>
 							<li>
-								<img src="images/ningmengpian.png">
+								<a href="#"> <img src="images/ningmengpian.png" alt="图片找不到了" class="transform-img">
 								<div class="commodity-description">
 									<div class="time-limit">N元任选</div>
 									<div >柠檬片</div>
 									<div class="price">价格</div>
-								</div>
+								</div></a>
 							</li>
 							<li>
-								<img src="images/chunniunai.png">
+								<a href="#"> <img src="images/chunniunai.png" alt="图片找不到了" class="transform-img">
 								<div class="hot">
 									<div>爆品</div>
 									<div class="time-limit">限时抢购</div>
 									<div>纯牛奶</div>
 									<div class="price">价格</div>
-								</div>
+								</div></a>
 							</li>
 
 						</ul>
@@ -1016,10 +608,77 @@
 			</div>
 	</div>
 	<div class="feedback-box">
-		
+		<div class="public-box">
+			<div class="feedback-box-left">
+				<div>客户服务</div>
+				<div>
+					<ul>
+						<li>
+							<a href="#">
+								<i class="iconfont icon-zaixiankefu "></i>
+								<div>在线客服</div>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="iconfont icon-wodefayan "></i>
+								<div>用户反馈</div>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="feedback-box-center">
+				<div>何为严选</div>
+				<p>网易原创生活类电商品牌，秉承网易一贯的严谨态度，我们深入世界各地，从源头全程严格把控商品生产环节，力求帮消费者甄选到优质的商品</p>
+				<div>
+					关注我们：<i class="iconfont icon-yixin MY-weixin"></i><i class="fa fa-weixin MY-weixin"></i><i class="fa fa-weibo MY-weibo"></i>
+				</div>
+			</div>
+			<div class="feedback-box-right ">
+				<div>
+					扫码下载严选APP
+				</div>
+				<img src="images/erweimaxiazai.png">
+				<div>下载领1000元新人礼包</div>
+			</div>
+		</div>
 	</div>
 	<div class="bottom">
-		
+		<div class="public-box">
+			<div class="bottom-top">
+				<ul>
+					<li>
+						<div class="bottom-top-icon">
+							<i class="iconfont icon-dunpai"></i>
+						</div>
+						<div>30天无忧退换货</div>
+					</li>
+					<li><div class="bottom-top-icon">
+							<i class="iconfont icon-wuliu"></i>
+						</div>
+						<div>满88元免邮费</div></li>
+					<li><div class="bottom-top-icon">
+							<i class="iconfont icon-yi"></i>
+						</div>
+						<div>网易品质保证</div></li>
+				</ul>
+			</div>
+			<div class="bottom-dow">
+				<ul>
+					<li><a href="#">关于我们</a></li>
+					<li><a href="#">帮助中心</a></li>
+					<li><a href="#">售后服务</a></li>
+					<li><a href="#">配送与验收</a></li>
+					<li><a href="#">商务合作</a></li>
+					<li><a href="#">企业采购</a></li>
+					<li><a href="#">开放平台</a></li>
+					<li><a href="#">搜索推荐</a></li>
+					<li><a href="#">友情链接</a></li>
+				</ul>
+				<div>网易公司版权所有 © 1997-2018   食品经营许可证：JY13301080111719 出版物经营许可证：新出发滨字第0132号 单用途商业预付卡备案证：330100AAC0024</div>
+			</div>
+		</div>
 	</div>
 	<div class="right-advertising">
 		<ul>
