--- a/Homework.html
+++ b/Homework.html
@@ -329,7 +329,21 @@
 		</div>
 	</div>
 	<div class="advertising">
-	<a href="#"><img src="images/1.jpg"> </a>	
+		<ul>
+			<li><a href="#"><img src="images/1.jpg"></a></li>
+			<li><a href="#"><img src="images/2.jpg"></a></li>
+			<li><a href="#"><img src="images/3.jpg"></a></li>
+			<li><a href="#"><img src="images/4.jpg"></a></li>
+			<li><a href="#"><img src="images/5.jpg"></a></li>
+			<li><a href="#"><img src="images/6.jpg"></a></li>
+			<li><a href="#"><img src="images/7.jpg"></a></li>
+			<li><a href="#"><img src="images/8.jpg"></a></li>
+		</ul>
+		<!-- <div class="or-so"> -->
+			 <i class="iconfont zuo-icon	icon-xiangzuoyuanjiantouzuojiantouxiangzuomianxing"></i>
+			 <i class="iconfont you-icon icon-xiangyouyuanjiantouyoujiantouxiangyoumianxing"></i>
+			
+		<!-- </div> -->	
 	</div>
 	<div class="product-1">
 		<div class="public-box">
@@ -395,48 +409,58 @@
 			<ul class="new-goods-ul">
 				<li>
 					<div>
-						<img src="images/qiximeigui.jpg" >
+						<a href="#"> <img class="img-1" src="images/baoshi.png" ></a>
+						<a href="#"> <img class="img-2" src="images/baoshi1.jpg"></a>
 					</div> 
 					<div class="hot">
 							<div>七夕推荐</div>
 							<div class="time-limit">七夕礼物</div>
-							<div>定情七夕.红玫瑰</div>
+							<div><a href="#"> 定情七夕.红玫瑰</a></div>
 							<div class="price">价格</div>
 						</div>
 				</li>
 				<li>
 					<div>
-						<img src="images/zhenzhu.jpg">
+						<a href="#"> <img  class="img-1" src="images/shoulian.png"></a>
+						<a href="#"> <img class="img-2" src="images/shoulian1.jpg"></a>
 					</div> 
 					<div class="hot">
 							<div>七夕推荐</div>
 							<div class="time-limit">七夕礼物</div>
-							<div>定情七夕.珍珠项链</div>
+							<div><a href="#"> 定情七夕.珍珠项链</a></div>
 							<div class="price">价格</div>
 						</div>
 				</li>
 				<li>
 					<div>
-						<img src="images/zhenzhuerdin.jpg">
+						<a href="#"> <img  class="img-1" src="images/ersai.png"></a>
+						<a href="#"> <img class="img-2" src="images/ersai1.jpg"></a>
 					</div>
 					<div class="hot">
 							<div>七夕推荐</div>
 							<div class="time-limit">七夕礼物</div>
-							<div>定情七夕.珍珠耳钉</div>
+							<div><a href="#"> 定情七夕.珍珠耳钉</a></div>
 							<div class="price">价格</div>
 						</div></li>
 				<li>
 					<div>
-						<img src="images/meijiu.jpg">
+						<a href="#"> <img  class="img-1" src="images/touyingyi.png"></a>
+						<a href="#"> <img class="img-2" src="images/touyingyi1.jpg"></a>
 					</div>
 					 <div class="hot">
 							<div>七夕推荐</div>
 							<div class="time-limit">七夕特价</div>
-							<div> 和歌山柚子梅酒</div>
+							<div><a href="#">  和歌山柚子梅酒</a></div>
 							<div class="price">价格</div>
 					</div>
 				</li>
+
 				</ul>
+				
+			 <i class="iconfont zuo-icon	icon-xiangzuoyuanjiantouzuojiantouxiangzuomianxing"></i>
+			 <i class="iconfont you-icon icon-xiangyouyuanjiantouyoujiantouxiangyoumianxing"></i>
+			
+		
 			</div>
 		</div>
 	</div>
@@ -606,7 +630,6 @@
 				
 			</div>
 	</div>
-
 	<div class="feedback-box">
 		<div class="public-box">
 			<div class="feedback-box-left">
@@ -701,7 +724,22 @@
 					<i class="iconfont icon-xinhao MY-xinhao"></i>
 				</a>	
 				<span>订阅电子刊</span>
-				<div class="advertising-prompt">	</div>
+				<div class="advertising-prompt">
+					<div class="advertising-prompt-header">严选生活美学</div>
+					<div>订阅电子刊，第一时间获取严选最新资讯</div>
+					<div>
+						<input type="text" name=" email" placeholder="输入您的电子邮件">
+						<button>立即订阅</button>
+					</div>
+					<div>
+						<ul>
+							<li>专属优惠</li>
+							<li>尊享优先购</li>
+							<li>好货不错过</li>
+						</ul>
+					</div>
+
+				</div>
 			</li>
 			<li>
 			<a href="">
@@ -848,7 +886,6 @@
 					</div>	
 			</div>	
 	</div>
-
 </body>
 
 </html>
